# early-stunting-risk-ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: README.md  package-lock.json  package.json  requirements.txt  tailwind.config.js
backend/app/: __init__.py  config.py  main.py
backend/app/api/: explainability.py  model.py  prediction.py
backend/app/core/: explainability.py  logger.py  model_loader.py  predictor.py
backend/app/schemas/: __init__.py  model_info.py  prediction.py  request.py  response.py
backend/app/static/css/: output.css  styles.css
backend/app/static/js/: app.js  prediction.js  result.js  validation.js
backend/app/templates/: about.html  base.html  index.html  model.html  prediction.html  result.html
backend/app/templates/components/: alert.html  badge.html  card.html  modal.html
docs/: api.md  architecture.md  dataset.md  deployment.md  model.md  synthetic_generator.md
model/artifacts/: feature_names.json  label_mapping.json  training_config.json
model/explainability/: explanation_summary.json  feature_importance.csv  force_plot.html
model/metrics/: classification_report.json  cross_validation.json  metrics.json  model_info.json
model/trained_models/: best_pipeline.pkl
notebooks/: 01_machine_learning_pipeline.ipynb  02_explainable_ai.ipynb
synthetic_data/: README.md
synthetic_data/config/: distributions.yaml  export.yaml  generator.yaml  relationships.yaml  risk_rules.yaml  validation.yaml
synthetic_data/src/: main.py
synthetic_data/src/core/: config_loader.py  dataset_builder.py  pipeline.py  random_manager.py
synthetic_data/src/engines/: noise_engine.py  relationship_engine.py  risk_engine.py
synthetic_data/src/exporters/: __init__.py  csv_exporter.py  dictionary_exporter.py  metadata_exporter.py  statistics_exporter.py
synthetic_data/src/generators/: base.py  child.py  father.py  healthcare.py  household.py  mother.py  nutrition.py
synthetic_data/src/reports/: quality_report.py
synthetic_data/src/utils/: constants.py  logger.py  seed.py  yaml_reader.py
synthetic_data/src/validators/: __init__.py  base.py  dependency_validator.py  distribution_validator.py  duplicate_validator.py  range_validator.py
tests/: conftest.py
tests/unit/: test_engines.py  test_generators.py
